--- a/css/styles.css
+++ b/css/styles.css
@@ -553,6 +553,95 @@ img {
   background-color: var(--accent-color);
 }
 
+.footer .mailing {
+  margin-left: 95px;
+}
+
+.mailing-form {
+  display: flex;
+  width: 570px;
+}
+
+.mailing-form .form-label {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label .description {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  line-height: 1.14;
+  color: var(--primary-white-color);
+  text-transform: uppercase;
+}
+
+.form-label .form-input {
+  padding: 15px;
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: inherit;
+  color: rgba(255, 255, 255, 0.6);
+
+  transition: border 250ms var(--transition-timing-function);
+}
+
+.form-label .form-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-label .form-input:-webkit-autofill {
+  -webkit-box-shadow: inset 0 0 0 50px var(--bcg-color);
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.6);
+}
+
+.form-label .form-input:hover,
+.form-label .form-input:focus {
+  border: 1px solid var(--primary-white-color);
+}
+
+.button-subscribe {
+  display: flex;
+  margin-left: auto;
+  margin-top: auto;
+  max-height: 50px;
+  min-width: 200px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 28px;
+
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  fill: var(--primary-white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+
+  transition: background-color 250ms var(--transition-timing-function);
+}
+
+.button-subscribe:hover,
+.button-subscribe:focus,
+.button-subscribe:active {
+  background-color: var(--active-btn);
+}
+
+.button-subscribe .item-icon {
+  margin-left: 10px;
+  height: 24px;
+  width: 24px;
+}
+
 /* Сторінка портфоліо */
 
 /* Фільтр проектів */
@@ -670,10 +759,9 @@ img {
   top: 50%;
   left: 50%;
 
-  display: flex;
   min-height: 580px;
   min-width: 530px;
-  padding: 10px;
+  padding: 40px;
 
   background-color: var(--primary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -682,7 +770,8 @@ img {
 
   transform: translate(-50%, -50%) scale(1);
 
-  transition: transform 250ms ease;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal .icon {
@@ -690,17 +779,230 @@ img {
   height: 11px;
 }
 
+.modal-name {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+
+  color: var(--title-text-color);
+}
+
+.modal-form {
+  width: 100%;
+}
+
+.modal-form .form-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-form .form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form .label {
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.16;  
+  letter-spacing: 0.01em;  
+  color: var(--primary-text-color);
+}
+
+.input-field {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal-form .input {
+  height: 40px;
+  padding-left: 42px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid var(--primary-text-color);
+  outline: none;
+
+  /* cursor: pointer; */
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form .item-icon {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 12px;
+  top: 50%;
+  pointer-events: none;
+
+  fill: var(--title-text-color);
+
+  transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input:hover, .input:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.input:hover + .item-icon,
+.input:focus +.item-icon {
+  fill: var(--accent-color);
+}
+
+.form-field .input-field.text {
+  margin-bottom: 20px;
+}
+
+.form-field .comment.input {
+  resize: none;
+  padding: 12px 16px;
+  height: 120px;
+
+  font-style: inherit;
+}
+
+.form-field .comment::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.input-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.input-checkbox + .icon .icon-check {
+  width: 16px;
+  height: 15px;
+  opacity: 0;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-checkbox + .icon {
+  display: flex;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+}
+
+.input-checkbox + .icon .icon-non-check {
+  position: absolute;
+  width: 16px;
+  height: 15px;
+  opacity: 1;
+
+  fill: var(--title-text-color);
+
+}
+
+.modal-form .label.checkbox {
+  display: flex;
+  position: relative;
+
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+}
+
+.input-checkbox:checked + .icon .icon-check {
+  opacity: 1;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  fill: var(--primary-white-color);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-checkbox:checked + .icon .icon-non-check {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.terms {
+  text-decoration-line: underline;
+  
+  color: var(--accent-color);
+}
+
+.button-send {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  max-height: 50px;
+  min-width: 200px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 28px;
+
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+  transition: background-color 250ms var(--transition-timing-function);
+}
+
+.button-send:hover,
+.button-send:focus,
+.button-send:active {
+  background-color: var(--active-btn);
+}
+
 .button-close-modal {
-  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;  
+  display: flex;
   height: 30px;
   width: 30px;
-  margin-left: auto;
   padding: 6px;
 
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 15px;
+  border-radius: 50%;
   fill: #000000;
   background-color: var(--primary-white-color);
+  align-items: center;
+  justify-content: center;
+
+  transform: translate(-10px, 10px);
 
   cursor: pointer;
+
+  transition: fill 250ms var(--transition-timing-function);
+}
+
+.button-close-modal:hover,
+.button-close-modal:focus,
+.button-close-modal:active {
+  fill: var(--active-btn);
 }
