--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,7 @@ img {
 .mailing-form {
   display: flex;
   width: 570px;
+  margin-top: 20px;
 }
 
 .mailing-form .form-label {
@@ -568,8 +569,7 @@ img {
   flex-direction: column;
 }
 
-.form-label .description {
-  margin-bottom: 20px;
+.mailing .description {
 
   font-weight: 700;
   line-height: 1.14;
@@ -578,12 +578,13 @@ img {
 }
 
 .form-label .form-input {
+  height: 50px;
   padding: 15px;
   outline: none;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: inherit;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--primary-white-color);
 
   transition: border 250ms var(--transition-timing-function);
 }
@@ -607,7 +608,6 @@ img {
 .button-subscribe {
   display: flex;
   margin-left: auto;
-  margin-top: auto;
   max-height: 50px;
   min-width: 200px;
   border: 1px solid transparent;
@@ -815,9 +815,16 @@ img {
   color: var(--primary-text-color);
 }
 
+.modal-form .form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form .form-field.text {
+  margin-bottom: 20px;
+}
+
 .input-field {
   position: relative;
-  margin-bottom: 10px;
 }
 
 .modal-form .input {
@@ -828,10 +835,10 @@ img {
   border: 1px solid var(--primary-text-color);
   outline: none;
 
-  /* cursor: pointer; */
-
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
   outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
 }
 
 .modal-form .item-icon {
@@ -856,10 +863,6 @@ img {
 .input:hover + .item-icon,
 .input:focus +.item-icon {
   fill: var(--accent-color);
-}
-
-.form-field .input-field.text {
-  margin-bottom: 20px;
 }
 
 .form-field .comment.input {
@@ -917,6 +920,7 @@ img {
 .modal-form .label.checkbox {
   display: flex;
   position: relative;
+  margin: 0;
 
   font-size: 14px;
   line-height: 1.71;
@@ -952,10 +956,9 @@ img {
   margin-right: auto;
   margin-top: 30px;
   max-height: 50px;
-  min-width: 200px;
-  border: 1px solid transparent;
+  border-color: transparent;
   border-radius: 4px;
-  padding: 10px 28px;
+  padding: 10px 52px;
 
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -966,7 +969,6 @@ img {
   line-height: 1.88;
   letter-spacing: 0.06em;
   align-items: center;
-  justify-content: center;
   cursor: pointer;
 
   transition: background-color 250ms var(--transition-timing-function);
