--- a/css/styles.css
+++ b/css/styles.css
@@ -823,6 +823,10 @@ img {
   margin-bottom: 20px;
 }
 
+.modal-form .form-field.check {
+  margin-bottom: 30px;
+}
+
 .input-field {
   position: relative;
 }
@@ -832,7 +836,7 @@ img {
   padding-left: 42px;
   width: 100%;
   border-radius: 3px;
-  border: 1px solid var(--primary-text-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -843,8 +847,8 @@ img {
 
 .modal-form .item-icon {
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
   left: 12px;
   top: 50%;
   pointer-events: none;
@@ -863,6 +867,10 @@ img {
 .input:hover + .item-icon,
 .input:focus +.item-icon {
   fill: var(--accent-color);
+}
+
+.form-field.text .input-field {
+  height: 120px;
 }
 
 .form-field .comment.input {
@@ -915,6 +923,7 @@ img {
 
   fill: var(--title-text-color);
 
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form .label.checkbox {
@@ -929,6 +938,10 @@ img {
   justify-content: center;
 
   cursor: pointer;
+}
+
+.checkbox:hover .icon .icon-non-check {
+  fill: var(--accent-color);
 }
 
 .input-checkbox:checked + .icon .icon-check {
